Fix all deprecations and warnings from tests