@@ -18,6 +18,7 @@
 package io.openvidu.test.browsers;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -84,9 +85,10 @@ public class ChromeUser extends BrowserUser {
 		if (REMOTE_URL != null) {
 			log.info("Using URL {} to connect to remote web driver", REMOTE_URL);
 			try {
-				this.driver = new RemoteWebDriver(new URL(REMOTE_URL), options);
-			} catch (MalformedURLException e) {
-				e.printStackTrace();
+				URL remoteUrl = URI.create(REMOTE_URL).toURL();
+				this.driver = new RemoteWebDriver(remoteUrl, options);
+			} catch (IllegalArgumentException | MalformedURLException e) {
+				throw new IllegalArgumentException("Invalid REMOTE_URL_CHROME value: " + REMOTE_URL, e);
 			}
 		} else {
 			log.info("Using local web driver");
@@ -94,7 +96,7 @@ public class ChromeUser extends BrowserUser {
 		}
 
 		this.driver.manage().timeouts().scriptTimeout(Duration.ofSeconds(timeOfWaitInSeconds));
-		this.configureDriver(new org.openqa.selenium.Dimension(1920, 1080));
+		super.configureDriver(new org.openqa.selenium.Dimension(1920, 1080));
 	}
 
 	private static ChromeOptions generateDefaultScreenChromeOptions() {
