@@ -18,6 +18,7 @@
 package io.openvidu.test.browsers;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.time.Duration;
 
@@ -51,9 +52,10 @@ public class FirefoxUser extends BrowserUser {
 			options.addArguments("--headless");
 			log.info("Using URL {} to connect to remote web driver", REMOTE_URL);
 			try {
-				this.driver = new RemoteWebDriver(new URL(REMOTE_URL), options);
-			} catch (MalformedURLException e) {
-				e.printStackTrace();
+				URL remoteUrl = URI.create(REMOTE_URL).toURL();
+				this.driver = new RemoteWebDriver(remoteUrl, options);
+			} catch (IllegalArgumentException | MalformedURLException e) {
+				throw new IllegalArgumentException("Invalid REMOTE_URL_FIREFOX value: " + REMOTE_URL, e);
 			}
 		} else {
 			log.info("Using local web driver");
@@ -61,7 +63,7 @@ public class FirefoxUser extends BrowserUser {
 		}
 
 		this.driver.manage().timeouts().scriptTimeout(Duration.ofSeconds(timeOfWaitInSeconds));
-		this.configureDriver(new org.openqa.selenium.Dimension(1920, 1080));
+		super.configureDriver(new org.openqa.selenium.Dimension(1920, 1080));
 	}
 
 }
